kubernetes/rancher/istio-gateway-tls.template.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rancher
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - ${RANCHER_HOSTNAME}
    port:
      name: http2
      number: 8080
      protocol: HTTP2
    tls:
      httpsRedirect: true
  - hosts:
    - "${RANCHER_HOSTNAME}"
    port:
      name: https
      number: 8443
      protocol: HTTPS
    tls:
      credentialName: tls-rancher-ingress
      mode: SIMPLE
