kubernetes/rancher/istio-virtualservice-tls.template.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rancher
spec:
  selector:
    istio-rancher: ingressgateway
  servers:
  - hosts:
    - ${RANCHER_HOSTNAME}
    port:
      name: http2
      number: 8080
      protocol: HTTP2
    tls:
      httpsRedirect: true
  - hosts:
    - ${RANCHER_HOSTNAME}
    port:
      name: https
      number: 8443
      protocol: HTTPS
    tls:
      credentialName: tls-rancher-ingress
      mode: SIMPLE
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rancher
spec:
  gateways:
  - rancher
  hosts:
  - ${RANCHER_HOSTNAME}
  http:
  - route:
    - destination:
        host: rancher
        port:
          number: 80
    headers:
      request:
        set:
          x-forwarded-proto: https
